[package]
categories = ["api-bindings", "wasm"]
description = "WasmEdge Runtime is a high-performance, extensible, and hardware optimized WebAssembly Virtual Machine for automotive, cloud, AI, and blockchain applications."
documentation = "https://wasmedge.github.io/wasmedge-rust-sdk/wasmedge_sdk/"
edition = "2021"
exclude = ["examples/"]
license = "Apache-2.0"
name = "bitbang"
readme = "README.md"
# repository = "https://github.com/WasmEdge/wasmedge-rust-sdk"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
cfg-if.workspace = true
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0.30"
bit-macro.workspace = true
bit-sys = { path = "crates/bit-sys", version = "^0.1.0" }
bit-types.workspace = true

[workspace.dependencies]
cfg-if = "1.0.0"
parking_lot = "0.12.1"
bit-macro = { path = "crates/bit-macro", version = "^0.1.0" }
bit-types = { path = "crates/bit-types", version = "^0.1.0" }
wat = "1.0"

[features]
aot = ["bit-sys/aot"]
default = ["aot"]
ffi = ["bit-sys/ffi"]
standalone = ["bit-sys/standalone"]
static = ["bit-sys/static"]
wasi_crypto = ["bit-sys/wasi_crypto"]
wasi_nn = ["bit-sys/wasi_nn"]
wasmedge_process = ["bit-sys/wasmedge_process"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
features = ["aot", "wasi_crypto", "wasi_nn", "wasmedge_process", "ffi"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["crates/bit-sys", "crates/bit-types", "crates/bit-macro"]
